keyboard: Don't crash if LANG is empty

Use en_US as the fallback locale if LANG isn't set.

https://bugzilla.gnome.org/show_bug.cgi?id=678100